--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.8",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
